--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Boolando</title>
 
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+   <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
+  <title>Boolando</title>
 </head>
+
 <body>
+
+  <header>
+    <div class="container d-flex justify-content-between h-100 align-center">
+
+      <nav class="main-menu">
+        <ul class="d-flex">
+          <li><a href="#">Uomo</a></li>
+          <li><a href="#">Donna</a></li>
+          <li><a href="#">Bambimo</a></li>
+        </ul>
+      </nav>
+      
+      <div class="box-logo">
+        <div class="logo">
+         <img src="img/boolean-logo.png" alt="logoboolean">
+        </div>
+      </div>
+
+      <nav class="social-menu">
+        <ul class="d-flex">
+          <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+          <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+          <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+        </ul>
+      </nav>
+    
+  </header>
   
 </body>
+
 </html>
