[add+fix] add footer + minor fixs

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
       <div class="row d-flex flex-wrap">
 
+                <!-- CARD 1 -->
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -65,8 +66,8 @@
             </div>
 
             <div class="card-text">
-              <span class="brand">Guess</span>
-              <h3 class="product-name">ROSES TEE</h3>
+              <span class="brand">Levi's</span>
+              <h3 class="product-name">RELAXED FIT TEE UNISEX</h3>
                 <div class="price">
                   <span>14.99&euro;</span>
                   <span>29.99&euro;</span>
@@ -75,6 +76,7 @@
           </div>
         </div>
 
+                <!-- CARD 2 -->
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -91,16 +93,17 @@
             </div>
 
             <div class="card-text">
-              <span class="brand">Come Zucchero Filato</span>
-              <h3 class="product-name">VOGLIA DI COLORI PASTELLO</h3>
+              <span class="brand">Guess</span>
+              <h3 class="product-name">ROSES TEE</h3>
                 <div class="price">
-                  <span>14.99€</span>
-                 <span>29.99€</span>
+                  <span>20.99&euro;</span>
+                 <span>29.99&euro;</span>
                 </div>
             </div>
           </div>
         </div>
 
+              <!-- CARD 3 -->
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -117,16 +120,17 @@
             </div>
 
             <div class="card-text">
-              <span class="brand">Levi's</span>
-              <h3 class="product-name">TEE UNISEX</h3>
+              <span class="brand">Come Zucchero Filato</span>
+              <h3 class="product-name">VOGLIA DI COLORI PASTELLO</h3>
                 <div class="price">
-                  <span>14.99€</span>
-                 <span>29.99€</span>
+                  <span>129.99&euro;</span>
+                 <span>184.99&euro;</span>
                 </div>
             </div>
           </div>
         </div>
 
+              <!-- CARD 4 -->
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -154,6 +158,7 @@
           </div>
         </div>
 
+              <!-- CARD 5 -->
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -171,12 +176,12 @@
               <h3 class="product-name">STRIPE BODICE</h3>
                 <div class="price">
                   <span>14.99€</span>
-                 <span>29.99€</span>
                 </div>
             </div>
           </div>
         </div>
 
+              <!-- CARD 6 -->        
         <div class="col">
           <div class="card">
             <div class="card-image">
@@ -197,16 +202,37 @@
               <h3 class="product-name">MAGLIONE - BLACK</h3>
                 <div class="price">
                   <span>14.99€</span>
-                 <span>29.99€</span>
                 </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </main>
-  
+
+  <footer>
+    <div class="container d-flex justify-content-between h-100 align-center">
+      
+      <div class="footer-info">
+        <h3>Boolando s.r.l</h3>
+        <a href="#">Informazioni legali</a>
+       <a href="#">Informativa sulla privacy</a>
+       <a href="#">Diritto di recesso</a>
+      </div>
+
+      <div class="footer-social">
+       <h4>Trovaci anche su</h4>
+        <ul class="d-flex">
+         <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+         <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+         <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+         <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></li>
+         <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
